# AuraLite-AI

./: .pre-commit-config.yaml  AuraLite_AI_v2.spec  CHANGELOG.md  Dockerfile  LICENSE  PROJECT_ANALYSIS.md  README.md  build_exe.bat  chat_interface.py  eval.py  evaluation.py  export.py  gui_app.py  hf_integration.py  improvement_summary.md  model_engine.py  pyproject.toml  quantization.py  requirements.txt  web_tools.py
.github/workflows/: ci.yml
benchmarks/: baseline_vs_improved.md  benchmark_generation.py  quantization_accuracy_report.md
gui/: __init__.py  app.py  async_ops.py  config.py  i18n.py  session.py  theme.py  visualizations.py  widgets.py
gui/tabs/: quantization_tab.py
kernels/: __init__.py  rms_norm.py  rope_apply.py  sampling.py  swiglu.py
model_engine/: __init__.py  backends.py  config.py  dataset.py  engine.py  generation.py  gguf_proxy.py  hf_proxy.py  layers.py  model.py  profiling.py  scheduler.py  tokenizers.py  training.py  utils.py
server/: __init__.py  ollama_compat.py  openai_server.py
tests/: bench_generation.py  test_architecture_v24.py  test_chat_interface.py  test_engine_generation_unit.py  test_eval_metrics.py  test_evaluation_engine.py  test_export.py  test_gguf_proxy.py  test_gradient_checkpointing.py  test_gui_export_extras.py  test_hf_integration.py  test_model_engine.py  test_property_based_v24.py  test_quantization.py  test_quantization_unit_extras.py  test_recommendations_and_validation.py  test_web_tools.py
